Fix dark mode CSS

--- a/styles/grapheditor.css
+++ b/styles/grapheditor.css
@@ -1561,7 +1561,7 @@ html td.mxWindowTitle {
 /* ------------------------------------------------- DARK MODE ------------------------------------------------- */
 
 html body .geDiagramContainer, html body div.geMenubarContainer, html body td.mxPopupMenuIcon, html body .geFormatContainer, html body div.geMenubarContainer .geStatus:hover {
-	background-color:#2a2a2a;
+	background-color:#2a2a2a !important;
 }
 html body.geEditor div.mxPopupMenu {
 	border:3px solid #505759;
@@ -1605,10 +1605,10 @@ html body .geTemplate {
 html body .geToolbarContainer, html body .geSidebar, html body .geSidebarContainer .geTitle, html body input,
 html body textarea, html body button, html body .geColorBtn, html body .geBaseButton, html body .geSidebarTooltip,
 html body .geBaseButton, html .geSidebarContainer button {
-	background:#2a2a2a;
-	border-color:#505759;
-	box-shadow:none;
-	color:#cccccc;
+	background:#2a2a2a !important;
+	border-color:#505759 !important;
+	box-shadow:none !important;
+	color:#cccccc !important;
 }
 html body .geSidebarTooltip {
 	border:1px solid #505759;
@@ -1618,14 +1618,14 @@ html body .geSprite, html body .geSocialFooter img, html body .mxPopupMenuItem>i
 }
 html body .geFormatContainer {
 	background-color:#2a2a2a !important;
-	border-left:1px solid #505759;
+	border-left:1px solid #505759 !important;
 }
 html body .geSidebarFooter {
 	border-top:1px solid #505759;
 }
 html body .geFormatSection {
-	border-bottom:1px solid #505759;
-	border-color:#505759;
+	border-bottom:1px solid #505759 !important;
+	border-color:#505759 !important;
 }
 html body .geDiagramContainer {
 	border-color:#505759;
